version 0.1.1 (Jan 20th 2014)
  - minor fixes

version 0.1.0 (Jan 17th 2014)
  - initial release