@@ -1,3 +1,5 @@
+upcoming
+  - FastPFOR users 256-int blocks
 version 0.1.1 (Jan 20th 2014)
   - minor fixes
 
